--- a/priceartserv-ssl1.properties
+++ b/priceartserv-ssl1.properties
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #server.port = 5071
 
 #Application Config
-application.listino: 2
+application.listino: 1
 
 # Enable SSL support.
 server.ssl.enabled=true
@@ -60,9 +60,10 @@ management.endpoint.health.show-details=when-authorized
 management.info.git.mode=full
 
 
-info.assistenza.nome=Nicola La Rocca
-info.assistenza.email=nicola@maimail.com
+info.assistenza.nome=Monika Petkova
+info.assistenza.email=petkova@mail.com
 info.assistenza.telefono=3341234567clear
+info.tipoconf=github
 
 
 
