--- a/priceartserv-list1.properties
+++ b/priceartserv-list1.properties
@@ -2,8 +2,8 @@
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
 spring.datasource.url = jdbc:mysql://localhost:3306/alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = Nicola
-spring.datasource.password = 123_Stella
+spring.datasource.username = root
+spring.datasource.password = admin
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
