--- a/priceartserv-list2.properties
+++ b/priceartserv-list2.properties
@@ -3,8 +3,8 @@
 # "root" as username and password.
 spring.application.name=priceartserve
 spring.datasource.url = jdbc:mysql://localhost:3306/alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = Nicola
-spring.datasource.password = 123_Stella
+spring.datasource.username = root
+spring.datasource.password = admin
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
