--- a/priceartserv-ssl1.properties
+++ b/priceartserv-ssl1.properties
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #server.port = 5071
 
 #Application Config
-application.listino: 1
+application.listino: 3
 
 # Enable SSL support.
 server.ssl.enabled=true
@@ -64,6 +64,7 @@ info.assistenza.nome=Monika Petkova
 info.assistenza.email=petkova@mail.com
 info.assistenza.telefono=3341234567clear
 info.tipoconf=github
+info.tipoconf.label=lis3
 
 
 
