add refresh actuator

--- a/priceartserv-ssl1.properties
+++ b/priceartserv-ssl1.properties
@@ -54,8 +54,8 @@ logging.file = ${logging.path}priceart.log
 #logging.level.com.xantrix.webapp = INFO
 
 #Actuator Properties
-management.endpoints.web.exposure.include=*
-#management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
 management.endpoint.health.show-details=when-authorized
 management.info.git.mode=full
 
