add info properties

--- a/promoserv-ssl1.properties
+++ b/promoserv-ssl1.properties
@@ -30,6 +30,46 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #Inseriamo il numero della porta
 server.port = 5061
 
+
+#Application Config
+application.listino: 2
+
+# Enable SSL support.
+server.ssl.enabled=true
+# Path to key store with SSL certificate
+server.ssl.key-store=classpath:ssl-server.jks
+# Key Store Password
+server.ssl.key-store-password=123_Stella
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-type=JKS
+
+#logging (By default ERROR, WARN and INFO log level messages are logged in console.)
+#levels:  TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
+logging.path = Logs/
+logging.file = ${logging.path}priceart.log 
+
+#logging.level.root=WARN
+#logging.level.org.springframework.data=DEBUG
+#logging.level.org.springframework=ERROR
+
+#logging.level.org.springframework.security= DEBUG
+#logging.level.org.springframework.web= ERROR
+#logging.level.org.hibernate= DEBUG
+#logging.level.com.xantrix.webapp = INFO
+
+#Actuator Properties
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
+management.endpoint.health.show-details=when-authorized
+management.info.git.mode=full
+
+
+info.assistenza.nome=Monika Petkova
+info.assistenza.email=petkova@mail.com
+info.assistenza.telefono=3341234567clear
+info.tipoconf=github
+info.tipoconf.label=lis3
+
 # ==============================================================
 # = GestUser Properties
 # ==============================================================
