--- a/articoliserv-ssl1.properties
+++ b/articoliserv-ssl1.properties
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 server.port = 5051
 
 gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
-gestuser.userId = ReadUser
+gestuser.userId = StdUser
 gestuser.password = BimBumBam_2018
 
 
