--- a/promoserv-ssl1.properties
+++ b/promoserv-ssl1.properties
@@ -74,5 +74,5 @@ application.listino: 2
 # = GestUser Properties
 # ==============================================================
 gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
-gestuser.userId = ReadUser
+gestuser.userId = StdUser
 gestuser.password = BimBumBam_2018
