--- a/promoserv-ssl1.properties
+++ b/promoserv-ssl1.properties
@@ -16,7 +16,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
@@ -34,19 +34,19 @@ server.port = 5061
 #Application Config
 application.listino: 2
 
-## Enable SSL support.
-#server.ssl.enabled=true
+# Enable SSL support.
+server.ssl.enabled=true
 ## Path to key store with SSL certificate
-#server.ssl.key-store=classpath:ssl-server.jks
-## Key Store Password
-#server.ssl.key-store-password=123_Stella
-#server.ssl.key-store-provider=SUN
-#server.ssl.key-store-type=JKS
+server.ssl.key-store=classpath:ssl-server.jks
+# Key Store Password
+server.ssl.key-store-password=123_Stella
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-type=JKS
 #
-##logging (By default ERROR, WARN and INFO log level messages are logged in console.)
-##levels:  TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
-#logging.path = Logs/
-#logging.file = ${logging.path}priceart.log
+#logging (By default ERROR, WARN and INFO log level messages are logged in console.)
+#levels:  TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
+logging.path = Logs/
+logging.file = ${logging.path}promo.log
 #
 ##logging.level.root=WARN
 ##logging.level.org.springframework.data=DEBUG
@@ -57,18 +57,18 @@ application.listino: 2
 ##logging.level.org.hibernate= DEBUG
 ##logging.level.com.xantrix.webapp = INFO
 #
-##Actuator Properties
-##management.endpoints.web.exposure.include=*
-#management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
-#management.endpoint.health.show-details=when-authorized
-#management.info.git.mode=full
-#
-#
-#info.assistenza.nome=Monika Petkova
-#info.assistenza.email=petkova@mail.com
-#info.assistenza.telefono=3341234567clear
-#info.tipoconf=github
-#info.tipoconf.label=lis3
+#Actuator Properties
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
+management.endpoint.health.show-details=when-authorized
+management.info.git.mode=full
+
+
+info.assistenza.nome=Monika Petkova
+info.assistenza.email=petkova@mail.com
+info.assistenza.telefono=3341234567clear
+info.tipoconf=github
+info.tipoconf.label=lis3
 
 # ==============================================================
 # = GestUser Properties
@@ -76,3 +76,10 @@ application.listino: 2
 gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
 gestuser.userId = StdUser
 gestuser.password = BimBumBam_2018
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+#spring.queries.users-query=select nome_utente, password, ruolo from utenti where nome_utente=?
+#URI DEL AUTH SERVER
+security.oauth2.resource.user-info-uri=http://localhost:8444/user
