--- a/PRICEART-SERVER-zona1.properties
+++ b/PRICEART-SERVER-zona1.properties
@@ -1,6 +1,8 @@
-# DataSource settings: set here your own configurations for the database 
-# connection. In this example we have "netgloo_blog" as database name and 
+#_______________________________________________________________________
+# DataSource settings: set here your own configurations for the database
+# connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
+#spring.application.name=priceartserv
 spring.datasource.url = jdbc:mysql://localhost:3306/alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = admin
@@ -25,16 +27,13 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Inseriamo il numero della porta
-server.port = 5051
+#server.port = 5071
 
-gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
-gestuser.userId = StdUser
-gestuser.password = BimBumBam_2018
 #Application Config
-application.listino: 2
+application.listino: 1
 
 # Enable SSL support.
-server.ssl.enabled=true
+server.ssl.enabled=false
 # Path to key store with SSL certificate
 server.ssl.key-store=classpath:ssl-server.jks
 # Key Store Password
@@ -45,29 +44,26 @@ server.ssl.key-store-type=JKS
 #logging (By default ERROR, WARN and INFO log level messages are logged in console.)
 #levels:  TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
 logging.path = Logs/
-logging.file = ${logging.path}articoli.log 
+logging.file = ${logging.path}priceart.log 
 
+#logging.level.root=WARN
+#logging.level.org.springframework.data=DEBUG
+#logging.level.org.springframework=ERROR
+
+#logging.level.org.springframework.security= DEBUG
+#logging.level.org.springframework.web= ERROR
+#logging.level.org.hibernate= DEBUG
+#logging.level.com.xantrix.webapp = INFO
 
 #Actuator Properties
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
+#management.endpoints.web.exposure.include=health,info,httptrace,refresh
 management.endpoint.health.show-details=when-authorized
-management.info.git.mode=full
+#management.info.git.mode=full
 
 
 info.assistenza.nome=Monika Petkova
-info.assistenza.email=petkova@mail.com
-info.assistenza.telefono=3341234567clear
+info.assistenza.email=monika@maimail.com
 info.tipoconf=github
-info.tipoconf.label=lis3
+info.zona=1
 
- 
-
-price.service.url= http://127.0.0.1:5071/prezzi/
-
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
-#spring.queries.users-query=select nome_utente, password, ruolo from utenti where nome_utente=?
-#URI DEL AUTH SERVER
-security.oauth2.resource.user-info-uri=http://localhost:8444/user
