--- a/articoliserv-ssl1.properties
+++ b/articoliserv-ssl1.properties
@@ -28,14 +28,16 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 server.port = 5051
 
 gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
-#gestuser.userId = StdUser
-#gestuser.password = BimBumBam_2018
-gestuser.userId = AdmUser
-gestuser.password = MagicaBula_2018
+gestuser.userId = StdUser
+gestuser.password = BimBumBam_2018
+#gestuser.userId = AdmUser
+#gestuser.password = MagicaBula_2018
 
 
 #Application Config
 application.listino: 2
+
+#price.service.url= https://localhost:5071/prezzi/
 
 # Enable SSL support.
 server.ssl.enabled=true
