--- a/artserv-prc3.properties
+++ b/artserv-prc3.properties
@@ -25,11 +25,13 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Inseriamo il numero della porta
-server.port = 5051
+#server.port = 5051
 
+#Gest User
 gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
 gestuser.userId = StdUser
 gestuser.password = BimBumBam_2018
+
 #Application Config
 application.listino: 2
 
@@ -54,16 +56,12 @@ management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refr
 management.endpoint.health.show-details=when-authorized
 management.info.git.mode=full
 
-
+# Info
 info.assistenza.nome=Monika Petkova
 info.assistenza.email=petkova@mail.com
-info.assistenza.telefono=3341234567clear
 info.tipoconf=github
 info.tipoconf.label=lis3
 
- 
-
-price.service.url= http://127.0.0.1:5071/prezzi/
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
@@ -71,3 +69,19 @@ price.service.url= http://127.0.0.1:5071/prezzi/
 #spring.queries.users-query=select nome_utente, password, ruolo from utenti where nome_utente=?
 #URI DEL AUTH SERVER
 security.oauth2.resource.user-info-uri=http://localhost:8444/user
+
+
+# FEIGN Client
+price.service.url= http://127.0.0.1:5071/prezzi/
+
+# FEIGN CONFIG
+feign.compression.request.enabled=true
+feign.compression.response.enabled=true
+
+# RIBBON CONFIG
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
+priceartserv.ribbon.listOfServers=http://localhost:5071, http://localhost:5072, http://localhost:5073
+#Opzioni Disponibili: RoundRobinRule, AvailabilityFilteringRule, BestAvailabileRule, WeightedResponseTimeRule
+ribbon.NFLoadBalancerPingClassName=com.netflix.loadBalancer.PingUrl
+ribbon.NFLoadBalancerRuleClassName=com.netflix.loadBalancer.WeightedResponseTimeRule
