--- a/ART-SERVER-zona1.properties
+++ b/ART-SERVER-zona1.properties
@@ -1,5 +1,6 @@
-# DataSource settings: set here your own configurations for the database 
-# connection. In this example we have "netgloo_blog" as database name and 
+#_______________________________________________________________________
+# DataSource settings: set here your own configurations for the database
+# connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
 spring.datasource.url = jdbc:mysql://localhost:3306/alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
@@ -24,15 +25,6 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-#Inseriamo il numero della porta
-server.port = 5051
-
-gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
-gestuser.userId = StdUser
-gestuser.password = BimBumBam_2018
-#Application Config
-application.listino: 2
-
 # Enable SSL support.
 server.ssl.enabled=true
 # Path to key store with SSL certificate
@@ -45,29 +37,37 @@ server.ssl.key-store-type=JKS
 #logging (By default ERROR, WARN and INFO log level messages are logged in console.)
 #levels:  TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
 logging.path = Logs/
-logging.file = ${logging.path}articoli.log 
+logging.file = ${logging.path}priceart.log 
 
+#logging.level.root=WARN
+#logging.level.org.springframework.data=DEBUG
+#logging.level.org.springframework=ERROR
+
+#logging.level.org.springframework.security= DEBUG
+#logging.level.org.springframework.web= ERROR
+#logging.level.org.hibernate= DEBUG
+#logging.level.com.xantrix.webapp = INFO
+#logging.level.com.xantrix.webapp.controller.PriceClient= DEBUG
 
 #Actuator Properties
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
-management.endpoint.health.show-details=when-authorized
-management.info.git.mode=full
-
+#management.endpoints.web.exposure.include=health,info,httptrace,refresh
+#management.endpoint.health.show-details=when-authorized
+#management.info.git.mode=full
 
 info.assistenza.nome=Monika Petkova
-info.assistenza.email=petkova@mail.com
-info.assistenza.telefono=3341234567clear
+info.assistenza.email=monika@maimail.com
 info.tipoconf=github
-info.tipoconf.label=lis3
+info.zona=1
 
- 
+#Feign Properties
+feign.compression.request.enabled=true
+feign.compression.response.enabled=true
 
-price.service.url= http://127.0.0.1:5071/prezzi/
-
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
-#spring.queries.users-query=select nome_utente, password, ruolo from utenti where nome_utente=?
-#URI DEL AUTH SERVER
-security.oauth2.resource.user-info-uri=http://localhost:8444/user
+#Ribbon Properties
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
+#priceartserv.ribbon.listOfServers= http://localhost:5071,http://localhost:5072,http://localhost:5073
+#Opzioni Disponibili: RoundRobinRule AvailabilityFilteringRule BestAvailableRule WeightedResponseTimeRule
+ribbon.NFLoadBalancerPingClassName= com.netflix.loadbalancer.PingUrl
+ribbon.NFLoadBalancerRuleClassName= com.netflix.loadbalancer.RoundRobinRule
