--- a/ART-SERVER-zona3.properties
+++ b/ART-SERVER-zona3.properties
@@ -1,6 +1,5 @@
-#_______________________________________________________________________
-# DataSource settings: set here your own configurations for the database
-# connection. In this example we have "netgloo_blog" as database name and
+# DataSource settings: set here your own configurations for the database 
+# connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
 spring.datasource.url = jdbc:mysql://localhost:3306/alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
@@ -26,7 +25,7 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Enable SSL support.
-server.ssl.enabled=true
+server.ssl.enabled=false
 # Path to key store with SSL certificate
 server.ssl.key-store=classpath:ssl-server.jks
 # Key Store Password
@@ -47,7 +46,7 @@ logging.file = ${logging.path}priceart.log
 #logging.level.org.springframework.web= ERROR
 #logging.level.org.hibernate= DEBUG
 #logging.level.com.xantrix.webapp = INFO
-#logging.level.com.xantrix.webapp.controller.PriceClient= DEBUG
+logging.level.com.xantrix.webapp.controller.PriceClient= DEBUG
 
 #Actuator Properties
 #management.endpoints.web.exposure.include=*
@@ -55,10 +54,11 @@ logging.file = ${logging.path}priceart.log
 #management.endpoint.health.show-details=when-authorized
 #management.info.git.mode=full
 
-info.assistenza.nome=Monika Petkova
-info.assistenza.email=monika@maimail.com
+info.assistenza.nome=Nicola La Rocca
+info.assistenza.email=nicola@maimail.com
+info.assistenza.telefono=3341234567
 info.tipoconf=github
-info.zona=3
+info.zona=zona2
 
 #Feign Properties
 feign.compression.request.enabled=true
@@ -71,3 +71,5 @@ ribbon.ConnectTimeout=60000
 #Opzioni Disponibili: RoundRobinRule AvailabilityFilteringRule BestAvailableRule WeightedResponseTimeRule
 ribbon.NFLoadBalancerPingClassName= com.netflix.loadbalancer.PingUrl
 ribbon.NFLoadBalancerRuleClassName= com.netflix.loadbalancer.RoundRobinRule
+
+
