--- a/PRICEART-SERVER-zona1.properties
+++ b/PRICEART-SERVER-zona1.properties
@@ -1,8 +1,6 @@
-#_______________________________________________________________________
-# DataSource settings: set here your own configurations for the database
-# connection. In this example we have "netgloo_blog" as database name and
+# DataSource settings: set here your own configurations for the database 
+# connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-#spring.application.name=priceartserv
 spring.datasource.url = jdbc:mysql://localhost:3306/alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = admin
@@ -62,8 +60,12 @@ management.endpoint.health.show-details=when-authorized
 #management.info.git.mode=full
 
 
-info.assistenza.nome=Monika Petkova
-info.assistenza.email=monika@maimail.com
+info.assistenza.nome=Nicola La Rocca
+info.assistenza.email=nicola@maimail.com
+info.assistenza.telefono=3341234567
 info.tipoconf=github
 info.zona=1
+
+
+ 
 
