--- a/PROMO-SERVICE-zona1.properties
+++ b/PROMO-SERVICE-zona1.properties
@@ -36,7 +36,7 @@ server.ssl.key-store-type=JKS
 #logging (By default ERROR, WARN and INFO log level messages are logged in console.)
 #levels:  TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
 logging.path = Logs/
-logging.file = ${logging.path}priceart.log 
+logging.file = ${logging.path}promosrv.log 
 
 #logging.level.root=WARN
 #logging.level.org.springframework.data=DEBUG
@@ -46,22 +46,29 @@ logging.file = ${logging.path}priceart.log
 #logging.level.org.springframework.web= ERROR
 #logging.level.org.hibernate= DEBUG
 #logging.level.com.xantrix.webapp = INFO
-logging.level.com.xantrix.webapp.controller.PriceClient= DEBUG
+#logging.level.com.xantrix.webapp.controller.PriceClient= DEBUG
 
 #Actuator Properties
 #management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=health,info,httptrace,refresh
-management.endpoint.health.show-details=when-authorized
+#management.endpoint.health.show-details=when-authorized
 #management.info.git.mode=full
 
 info.assistenza.nome=Nicola La Rocca
 info.assistenza.email=nicola@maimail.com
 info.assistenza.telefono=3341234567
 info.tipoconf=github
+info.zona=zona1
 
+#Feign Properties
 feign.compression.request.enabled=true
 feign.compression.response.enabled=true
 
-#URL Servizio Esterno Price
-price.service.url=http://localhost:5071/prezzi/
+#Ribbon Properties
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
+#Opzioni Disponibili: RoundRobinRule AvailabilityFilteringRule BestAvailableRule WeightedResponseTimeRule
+ribbon.NFLoadBalancerPingClassName= com.netflix.loadbalancer.PingUrl
+ribbon.NFLoadBalancerRuleClassName= com.netflix.loadbalancer.RoundRobinRule
+
 
