--- a/artserv-prc3.properties
+++ b/artserv-prc3.properties
@@ -24,19 +24,8 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-#Inseriamo il numero della porta
-#server.port = 5051
-
-#Gest User
-gestuser.srvUrl = http://localhost:8019/utenti/cerca/userid/
-gestuser.userId = StdUser
-gestuser.password = BimBumBam_2018
-
-#Application Config
-application.listino: 2
-
 # Enable SSL support.
-server.ssl.enabled=true
+server.ssl.enabled=false
 # Path to key store with SSL certificate
 server.ssl.key-store=classpath:ssl-server.jks
 # Key Store Password
@@ -47,41 +36,39 @@ server.ssl.key-store-type=JKS
 #logging (By default ERROR, WARN and INFO log level messages are logged in console.)
 #levels:  TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
 logging.path = Logs/
-logging.file = ${logging.path}articoli.log 
+logging.file = ${logging.path}priceart.log 
 
+#logging.level.root=WARN
+#logging.level.org.springframework.data=DEBUG
+#logging.level.org.springframework=ERROR
+
+#logging.level.org.springframework.security= DEBUG
+#logging.level.org.springframework.web= ERROR
+#logging.level.org.hibernate= DEBUG
+#logging.level.com.xantrix.webapp = INFO
+logging.level.com.xantrix.webapp.controller.PriceClient= DEBUG
 
 #Actuator Properties
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
+#management.endpoints.web.exposure.include=health,info,httptrace,refresh
 management.endpoint.health.show-details=when-authorized
-management.info.git.mode=full
+#management.info.git.mode=full
 
-# Info
-info.assistenza.nome=Monika Petkova
-info.assistenza.email=petkova@mail.com
+info.assistenza.nome=Nicola La Rocca
+info.assistenza.email=nicola@maimail.com
+info.assistenza.telefono=3341234567
 info.tipoconf=github
-info.tipoconf.label=lis3
 
-
-# ==============================================================
-# = Spring Security / Queries for AuthenticationManagerBuilder
-# ==============================================================
-#spring.queries.users-query=select nome_utente, password, ruolo from utenti where nome_utente=?
-#URI DEL AUTH SERVER
-security.oauth2.resource.user-info-uri=http://localhost:8444/user
-
-
-# FEIGN Client
-price.service.url= http://127.0.0.1:5071/prezzi/
-
-# FEIGN CONFIG
+#Feign Properties
 feign.compression.request.enabled=true
 feign.compression.response.enabled=true
 
-# RIBBON CONFIG
+#Ribbon Properties
 ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=60000
-priceartserv.ribbon.listOfServers=http://localhost:5071, http://localhost:5072, http://localhost:5073
-#Opzioni Disponibili: RoundRobinRule, AvailabilityFilteringRule, BestAvailabileRule, WeightedResponseTimeRule
-ribbon.NFLoadBalancerPingClassName=com.netflix.loadBalancer.PingUrl
-ribbon.NFLoadBalancerRuleClassName=com.netflix.loadBalancer.WeightedResponseTimeRule
+#priceartserv.ribbon.listOfServers= http://localhost:5071,http://localhost:5072,http://localhost:5073
+#Opzioni Disponibili: RoundRobinRule AvailabilityFilteringRule BestAvailableRule WeightedResponseTimeRule
+ribbon.NFLoadBalancerPingClassName= com.netflix.loadbalancer.PingUrl
+ribbon.NFLoadBalancerRuleClassName= com.netflix.loadbalancer.RoundRobinRule
+
+
