--- a/artserv-ssl.properties
+++ b/artserv-ssl.properties
@@ -25,7 +25,7 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Enable SSL support.
-server.ssl.enabled=false
+server.ssl.enabled=true
 # Path to key store with SSL certificate
 server.ssl.key-store=classpath:ssl-server.jks
 # Key Store Password
@@ -46,7 +46,6 @@ logging.file = ${logging.path}priceart.log
 #logging.level.org.springframework.web= ERROR
 #logging.level.org.hibernate= DEBUG
 #logging.level.com.xantrix.webapp = INFO
-logging.level.com.xantrix.webapp.controller.PriceClient= DEBUG
 
 #Actuator Properties
 #management.endpoints.web.exposure.include=*
@@ -59,9 +58,4 @@ info.assistenza.email=nicola@maimail.com
 info.assistenza.telefono=3341234567
 info.tipoconf=github
 
-feign.compression.request.enabled=true
-feign.compression.response.enabled=true
-
-#URL Servizio Esterno Price
-price.service.url=http://localhost:5071/prezzi/
 
