--- a/priceartserv-ssl1.properties
+++ b/priceartserv-ssl1.properties
@@ -28,10 +28,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 #server.port = 5071
 
 #Application Config
-application.listino: 2
+application.listino: 1
 
 # Enable SSL support.
-server.ssl.enabled=true
+server.ssl.enabled=false
 # Path to key store with SSL certificate
 server.ssl.key-store=classpath:ssl-server.jks
 # Key Store Password
@@ -55,17 +55,15 @@ logging.file = ${logging.path}priceart.log
 
 #Actuator Properties
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,httptrace,refresh,bus-refresh
+#management.endpoints.web.exposure.include=health,info,httptrace,refresh
 management.endpoint.health.show-details=when-authorized
-management.info.git.mode=full
+#management.info.git.mode=full
 
 
-info.assistenza.nome=Monika Petkova
-info.assistenza.email=petkova@mail.com
-info.assistenza.telefono=3341234567clear
+info.assistenza.nome=Nicola La Rocca
+info.assistenza.email=nicola@maimail.com
+info.assistenza.telefono=3341234567
 info.tipoconf=github
-info.tipoconf.label=lis3
-
 
 
  
